

cmake_minimum_required(VERSION 3.27)
project(CodeRepository_Public)


set(CMAKE_CXX_STANDARD 23)


add_subdirectory(BilibiliLiveDanmuSpyer)
add_subdirectory(BoostThreadGroup)
add_subdirectory(OpenCVProject)
add_subdirectory(SnakeEatApple)
add_subdirectory(ThrottleStopDriver)
add_subdirectory(Wallpaper)

