

cmake_minimum_required(VERSION ${CMAKE_VERSION})
project(CodeRepository_Public)


set(CMAKE_CXX_STANDARD 26)


add_subdirectory(BilibiliLiveDanmuSpyer)
add_subdirectory(BoostThreadGroup)
add_subdirectory(OpenCVProject)
add_subdirectory(SnakeEatApple)
add_subdirectory(ThrottleStopDriver)
add_subdirectory(Wallpaper)
add_subdirectory(RPGMakerDecrypter)
add_subdirectory(XMLParser)