cmake_minimum_required(VERSION 3.21)

set(CMAKE_INSTALL_PREFIX D:/Lib)
project(rundll)

set(CMAKE_CXX_STANDARD 17)

if ("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
    set(zlib_root ${CMAKE_INSTALL_PREFIX}/zlib/x86-Debug)
    set(brotli_root ${CMAKE_INSTALL_PREFIX}/brotli/x86-Debug)
    set(ixwebsocket_root ${CMAKE_INSTALL_PREFIX}/ixwebsocket/x86-Debug)
else()
    set(zlib_root ${CMAKE_INSTALL_PREFIX}/zlib/x86-Release)
    set(brotli_root ${CMAKE_INSTALL_PREFIX}/brotli/x86-Release)
    set(ixwebsocket_root ${CMAKE_INSTALL_PREFIX}/ixwebsocket/x86-Release)
endif ()
include_directories(${brotli_root}/include)
include_directories(${ixwebsocket_root}/include)
include_directories(D:/Winhttp_SimpleAPI)

add_executable(websocket WebSocketTest.cpp)

if("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
    target_link_libraries(websocket D:/Winhttp_SimpleAPI/cmake-build-debug/Winhttp_SimpleAPI.lib)
    target_link_libraries(websocket D:/OpenSSL-Win32/lib/VC/libssl32MTd.lib)
    target_link_libraries(websocket D:/OpenSSL-Win32/lib/VC/libcrypto32MTd.lib)
    target_link_libraries(websocket ${brotli_root}/lib/brotlidec.lib)
    target_link_libraries(websocket ${ixwebsocket_root}/lib/ixwebsocket.lib)
    target_link_libraries(websocket ${zlib_root}/lib/zlibd.lib)
else()
    target_link_libraries(websocket D:/Winhttp_SimpleAPI/cmake-build-release/Winhttp_SimpleAPI.lib)
    target_link_libraries(websocket D:/OpenSSL-Win32/lib/VC/libssl32MT.lib)
    target_link_libraries(websocket D:/OpenSSL-Win32/lib/VC/libcrypto32MT.lib)
    target_link_libraries(websocket ${brotli_root}/lib/brotlidec.lib)
    target_link_libraries(websocket ${ixwebsocket_root}/lib/ixwebsocket.lib)
    target_link_libraries(websocket ${zlib_root}/lib/zlib.lib)
endif()
target_link_libraries(websocket ws2_32)
target_link_libraries(websocket crypt32)
target_link_libraries(websocket shlwapi)
